fixed home text placement on smaller screens

--- a/style.css
+++ b/style.css
@@ -52,6 +52,7 @@ body {
 .hometext {
 	padding-left: 0.7%;
 	float: left;
+	margin-left: -97%;
 	
 	
 }
@@ -65,7 +66,7 @@ body {
 	width: 450px;
 	height: 450px;
 	padding: 0.7%;
-	margin-left: 70%;
+	margin-left: 73%;
 	
 }
 .picrew2 {
